--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -3,7 +3,7 @@ name: Generate Snake
 on:
   # run automatically every 12 hours
   schedule:
-    - cron: "*/2 * * * *" #"0 */12 * * *"
+    - cron: "0 */12 * * *"
 
   # allows to manually run the job at any time
   workflow_dispatch:
@@ -11,7 +11,7 @@ on:
   # run on every push on the master branch
   push:
     branches:
-    - master
+    - main
 
 jobs:
   generate:
