updated workflow to trigger when push to Site branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Website with EmailJS Config
 
 on:
   push:
-    branches: [ main, master, Site_Dev ]
+    branches: [ Site ]
   workflow_dispatch:
 
 jobs:
