--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,5 +76,20 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./
+        publish_branch: gh-pages
         keep_files: false
         exclude_assets: ''
+        force_orphan: true
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
+
+    - name: Verify deployment
+      run: |
+        echo "✓ Deployment completed"
+        echo "Website should be available at: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
+        echo ""
+        echo "Note: It may take 1-2 minutes for changes to appear."
+        echo "If the site doesn't update, try:"
+        echo "  1. Hard refresh your browser (Ctrl+Shift+R or Cmd+Shift+R)"
+        echo "  2. Clear browser cache"
+        echo "  3. Wait a few minutes for GitHub Pages to propagate"
